data/derived/fa15/progs/unify/prog1528.ml.out
Characters 172-186:
  in fst(padZeroLists) snd(padZeroLists)
        ^^^^^^^^^^^^^^
Error: This expression has type int list * int list
       but an expression was expected of type ('a -> 'b -> 'c) * 'd
       Type int list is not compatible with type 'a -> 'b -> 'c 
